Lib and Button styles update

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,12 @@ body {
     text-align: center;
 }
 
+.comp-cont {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .code-cont {
     display: flex;
     align-items: center;
