--- a/src/components/XButton/XButton.scss
+++ b/src/components/XButton/XButton.scss
@@ -1,6 +1,11 @@
 .x-btn {
     cursor: pointer;
     border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+
 
     &:focus {
         border-radius: 10px;
